go-web-app-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
  labels: 
    app: go-web-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP 
  selector:
    app: go-web-app
  type: ClusterIP
